--- a/backend/.env
+++ b/backend/.env
@@ -12,3 +12,12 @@ FRONTEND_URL=http://localhost:5173
 
 # Configuration CORS
 CORS_ORIGIN=http://localhost:5173
+
+# Configuration Email Gmail
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=hippoliteagbodamakou@gmail.com
+SMTP_PASS=mbzu elda pplk ejsm
+EMAIL_FROM=hippoliteagbodamakou@gmail.com
+EMAIL_FROM_NAME=CRM System
