--- a/backend/.env
+++ b/backend/.env
@@ -8,10 +8,10 @@ JWT_SECRET=your-secret-key
 
 # Configuration des ports
 PORT=3001
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=http://localhost:1573
 
 # Configuration CORS
-CORS_ORIGIN=http://localhost:5173
+CORS_ORIGIN=http://localhost:1573
 
 # Configuration Email Gmail
 SMTP_HOST=smtp.gmail.com
@@ -21,3 +21,12 @@ SMTP_USER=hippoliteagbodamakou@gmail.com
 SMTP_PASS=mbzu elda pplk ejsm
 EMAIL_FROM=hippoliteagbodamakou@gmail.com
 EMAIL_FROM_NAME=CRM System
+
+# Configuration OAuth
+# Google OAuth
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# GitHub OAuth
+GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
