--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
     "migration:run": "npm run typeorm -- migration:run -d ormconfig.ts",
     "migration:revert": "npm run typeorm -- migration:revert -d ormconfig.ts",
     "schema:drop": "npm run typeorm -- schema:drop -d ormconfig.ts",
-    "init:user": "ts-node src/scripts/init-user.ts"
+    "init:user": "ts-node src/scripts/init-user.ts",
+    "seed:products": "ts-node src/scripts/seed-products.ts",
+    "seed:categories": "ts-node src/scripts/seed-categories.ts"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
@@ -40,12 +42,16 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
+    "exceljs": "^4.4.0",
     "handlebars": "^4.7.8",
     "nodemailer": "^7.0.12",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
+    "puppeteer": "^24.36.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
@@ -58,6 +64,8 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.6",
+    "@types/passport-github2": "^1.2.9",
+    "@types/passport-google-oauth20": "^2.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
