--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,14 +15,18 @@
     "@fortawesome/react-fontawesome": "^3.1.1",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.25.0",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.20.0",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
