--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,15 @@
+# Configuration locale (développement)
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=admin123
 DB_DATABASE=crm
+
+# Configuration production (Render)
+DATABASE_URL=postgresql://firstbackend_47rd_user:nYx2o4lwU2B3yKWzeWGIonBD0n5d6rN9@dpg-d60hkavgi27c73c9na5g-a.oregon-postgres.render.com/firstbackend_47rd
+
 NODE_ENV=development
-JWT_SECRET=your-secret-key
+JWT_SECRET=your-secret-key-change-in-production
 
 # Configuration des ports
 PORT=3001
