--- a/backend/env.example
+++ b/backend/env.example
@@ -1,13 +1,37 @@
-a# Database
+# Configuration locale (développement)
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_PASSWORD=your_password
 DB_DATABASE=crm
 
-# JWT
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
+# Configuration production (Render/Heroku)
+DATABASE_URL=postgresql://user:password@host:port/database
 
-# Environment
 NODE_ENV=development
+JWT_SECRET=your-jwt-secret-key
 
+# Configuration des ports
+PORT=3001
+FRONTEND_URL=http://localhost:1573
+
+# Configuration CORS
+CORS_ORIGIN=http://localhost:1573
+
+# Configuration Email Gmail
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+EMAIL_FROM=your-email@gmail.com
+EMAIL_FROM_NAME=CRM System
+
+# Configuration OAuth
+# Google OAuth
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# GitHub OAuth
+GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
