--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -34,6 +34,18 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
-# Environment
+# Environment variables
+.env
+.env.local
+.env.production
+.env.staging
+
+# Database
+*.sqlite
+*.db
+
+# Temporary files
+*.tmp
+*.temp
 
 
